--- a/Lyme Disease.Rmd
+++ b/Lyme Disease.Rmd
@@ -17,58 +17,59 @@ knitr::opts_chunk$set(echo = TRUE)
 ##Minimum Temperatures
 
 ```{r}
-filenames<-list.files("./DATA/PRISM/MinTemp")
+filenames<-list.files("./data/PRISM/min_temp")
 filenames<-filenames[grep(".*\\.bil$",filenames)]
-filenames<-gsub("PRISM","\\./DATA/PRISM/MinTemp/PRISM",filenames)
+filenames<-gsub("PRISM","\\./data/PRISM/min_temp/PRISM",filenames)
 
+require(maptools)
+require(raster)
 
 mean2<-function(x){return(mean(x,na.rm=T))}
-US_Counties<-readShapePoly("./DATA/US/US_County_2000_2004_geo")
+US_Counties<-readShapePoly("./data/US/US_County_2000_2004_geo")
 US_Counties_Polygons<-as(US_Counties,"SpatialPolygons")
 
 #MinTemp
 r<-raster(filenames[1])
 z<-raster::extract(r,US_Counties_Polygons)
-prcp<-as.data.frame(cbind(rep(2000,length(US_Counties$FIPSNum)),US_Counties$FIPSNum,unlist(lapply(z,mean2))))
-names(prcp)<-c("year","fips","av")
+min_temp<-as.data.frame(cbind(rep(2000,length(US_Counties$FIPSNum)),US_Counties$FIPSNum,unlist(lapply(z,mean2))))
+names(min_temp)<-c("year","fips","av")
 
 for (i in 2:16){
-  r<-raster(filenames[i])
+  m<-raster(filenames[i])
   this.year<-i+1999
-  z<-raster::extract(r,US_Counties_Polygons)
-  tmp<-as.data.frame(cbind(rep(this.year,length(US_Counties$FIPSNum)),US_Counties$FIPSNum,unlist(lapply(z,mean2))))
-  names(tmp)<-c("year","fips","av")
-  MinTemp<-rbind(MinTemp,tmp)
+  n<-raster::extract(m,US_Counties_Polygons)
+  tmp1<-as.data.frame(cbind(rep(this.year,length(US_Counties$FIPSNum)),US_Counties$FIPSNum,unlist(lapply(n,mean2))))
+  names(min_temp)<-c("year","fips","av")
+  MinTemp<-rbind(min_temp,tmp1)
 }
 ```
 
 ##Maximum Temperatures
 ```{r}
-filenames<-list.files("./DATA/PRISM/MaxTemp")
+filenames<-list.files("./data/PRISM/max_temp")
 filenames<-filenames[grep(".*\\.bil$",filenames)]
-filenames<-gsub("PRISM","\\./DATA/PRISM/MaxTemp/PRISM",filenames)
+filenames<-gsub("PRISM","\\./data/PRISM/max_temp/PRISM",filenames)
 
 
 mean2<-function(x){return(mean(x,na.rm=T))}
-US_Counties<-readShapePoly("./DATA/US/US_County_2000_2004_geo")
+US_Counties<-readShapePoly("./data/US/US_County_2000_2004_geo")
 US_Counties_Polygons<-as(US_Counties,"SpatialPolygons")
 
-#MinTemp
-r<-raster(filenames[1])
-z<-raster::extract(r,US_Counties_Polygons)
-prcp<-as.data.frame(cbind(rep(2000,length(US_Counties$FIPSNum)),US_Counties$FIPSNum,unlist(lapply(z,mean2))))
-names(prcp)<-c("year","fips","av")
+#MaxTemp
+a<-raster(filenames[1])
+x<-raster::extract(a,US_Counties_Polygons)
+max_temp<-as.data.frame(cbind(rep(2000,length(US_Counties$FIPSNum)),US_Counties$FIPSNum,unlist(lapply(x,mean2))))
+names(max_temp)<-c("year","fips","av")
 
 for (i in 2:16){
-  r<-raster(filenames[i])
+  a<-raster(filenames[i])
   this.year<-i+1999
-  z<-raster::extract(r,US_Counties_Polygons)
-  tmp<-as.data.frame(cbind(rep(this.year,length(US_Counties$FIPSNum)),US_Counties$FIPSNum,unlist(lapply(z,mean2))))
-  names(tmp)<-c("year","fips","av")
-  MaxTemp<-rbind(MaxTemp,tmp)
+  x<-raster::extract(a,US_Counties_Polygons)
+  tmp2<-as.data.frame(cbind(rep(this.year,length(US_Counties$FIPSNum)),US_Counties$FIPSNum,unlist(lapply(x,mean2))))
+  names(max_temp)<-c("year","fips","av")
+  MaxTemp<-rbind(max_temp,tmp2)
 }
 
 ```
 
 
-This is great
