--- a/Lyme Disease.Rmd
+++ b/Lyme Disease.Rmd
@@ -1,8 +1,8 @@
 ---
 title: "Lyme Disease"
 author: "Jenna Lea"
-date: "May 16, 2017"
-output: html_document
+date: "5/20/2017"
+output: word_document
 ---
 
 ```{r setup, include=FALSE}
@@ -28,48 +28,58 @@ mean2<-function(x){return(mean(x,na.rm=T))}
 US_Counties<-readShapePoly("./data/US/US_County_2000_2004_geo")
 US_Counties_Polygons<-as(US_Counties,"SpatialPolygons")
 
-#MinTemp
+#Minimum Temperature
 r<-raster(filenames[1])
 z<-raster::extract(r,US_Counties_Polygons)
 min_temp<-as.data.frame(cbind(rep(2000,length(US_Counties$FIPSNum)),US_Counties$FIPSNum,unlist(lapply(z,mean2))))
 names(min_temp)<-c("year","fips","av")
 
 for (i in 2:16){
-  m<-raster(filenames[i])
+  r<-raster(filenames[i])
   this.year<-i+1999
-  n<-raster::extract(m,US_Counties_Polygons)
-  tmp1<-as.data.frame(cbind(rep(this.year,length(US_Counties$FIPSNum)),US_Counties$FIPSNum,unlist(lapply(n,mean2))))
-  names(min_temp)<-c("year","fips","av")
-  MinTemp<-rbind(min_temp,tmp1)
+  z<-raster::extract(r,US_Counties_Polygons)
+  tmp<-as.data.frame(cbind(rep(this.year,length(US_Counties$FIPSNum)),US_Counties$FIPSNum,unlist(lapply(z,mean2))))
+  names(tmp)<-c("year","fips","av")
+  min_temp<-rbind(min_temp,tmp)
 }
+
 ```
 
 ##Maximum Temperatures
+
 ```{r}
 filenames<-list.files("./data/PRISM/max_temp")
 filenames<-filenames[grep(".*\\.bil$",filenames)]
 filenames<-gsub("PRISM","\\./data/PRISM/max_temp/PRISM",filenames)
 
+require(maptools)
+require(raster)
 
 mean2<-function(x){return(mean(x,na.rm=T))}
 US_Counties<-readShapePoly("./data/US/US_County_2000_2004_geo")
 US_Counties_Polygons<-as(US_Counties,"SpatialPolygons")
 
-#MaxTemp
-a<-raster(filenames[1])
-x<-raster::extract(a,US_Counties_Polygons)
-max_temp<-as.data.frame(cbind(rep(2000,length(US_Counties$FIPSNum)),US_Counties$FIPSNum,unlist(lapply(x,mean2))))
+#Maximum Temperature
+s<-raster(filenames[1])
+y<-raster::extract(s,US_Counties_Polygons)
+max_temp<-as.data.frame(cbind(rep(2000,length(US_Counties$FIPSNum)),US_Counties$FIPSNum,unlist(lapply(y,mean2))))
 names(max_temp)<-c("year","fips","av")
 
 for (i in 2:16){
-  a<-raster(filenames[i])
+  s<-raster(filenames[i])
   this.year<-i+1999
-  x<-raster::extract(a,US_Counties_Polygons)
-  tmp2<-as.data.frame(cbind(rep(this.year,length(US_Counties$FIPSNum)),US_Counties$FIPSNum,unlist(lapply(x,mean2))))
-  names(max_temp)<-c("year","fips","av")
-  MaxTemp<-rbind(max_temp,tmp2)
+  y<-raster::extract(s,US_Counties_Polygons)
+  tmp1<-as.data.frame(cbind(rep(this.year,length(US_Counties$FIPSNum)),US_Counties$FIPSNum,unlist(lapply(y,mean2))))
+  names(tmp1)<-c("year","fips","av")
+  max_temp<-rbind(max_temp,tmp1)
 }
 
 ```
 
+##Convert dataframes to .csv
 
+```{r}
+write.csv(min_temp,file="MinTemp")
+write.csv(max_temp,file="MaxTemp")
+
+```
