--- a/Lyme Disease.Rmd
+++ b/Lyme Disease.Rmd
@@ -176,7 +176,8 @@ names(ld.total)[names(ld.total) == 'state'] <- 'State'
 
 countyTick<-read_csv("./data/TICK/countyTick.csv")
 #countyTick data frame lists only county name, ld.total lists "County" following county name
-ld.total$County<-gsub(" County","",ld.total$County) 
+ld.total$County<-gsub(" County","",ld.total$County)
+ld.total$County<-gsub(" Parish","",ld.total$County)
 
 #Need to remove some unecessary columns, only need first 3 and tick_presence
 countyTick$State_FIPS<-NULL
@@ -193,11 +194,13 @@ ld.total$SC<-paste(ld.total$County,ld.total$State,sep=",")
 countyTick$SC<-paste(countyTick$County,countyTick$State,sep=",")
 length(unique(ld.total$SC))
 length(unique(countyTick$SC))
+
 # e.g Baltimore - solution DO NOTHING Balt and Balt city are separalte locations
 tmp<-ld.total[grep("Baltimore",ld.total$SC),]
 
 #parrish - solution=GSUB
 tmp<-ld.total[grep("Parish",ld.total$SC),]
+
 
 # repeats in countyTick - solution:
 FIPScounter<-table(countyTick$fips)
@@ -226,4 +229,90 @@ for (i in 1:dim(countyTick)[1]){
 }
 
 
+library(ggplot2)
+library(readr)
+library(ggmap)
+library(maps)
+library(stringr)
+library(magrittr)
+library(dplyr)
+
+#Fixing Inconsistencies
+countyTick %<>% mutate(County=str_replace_all(County,"Mountrial","Mountrail"))
+countyTick %<>% mutate(County=str_replace_all(County,"Miami Dade","Miami-Dade"))
+countyTick %<>% mutate(County=str_replace_all(County,"De Kalb","DeKalb"))
+ld.total %<>% mutate(County=str_replace_all(County,"District of Columbia","Washington"))
+countyTick %<>% mutate(County=str_replace_all(County,"De Soto","DeSoto"))
+ld.total %<>% mutate(County=str_replace_all(County,"De Soto","DeSoto"))
+countyTick %<>% mutate(County=str_replace_all(County,"Du Page","DuPage"))
+countyTick %<>% mutate(County=str_replace_all(County,"La Salle","LaSalle"))
+ld.total %<>% mutate(County=str_replace_all(County,"La Salle","LaSalle"))
+countyTick %<>% mutate(County=str_replace_all(County,"Lagrange","LaGrange"))
+countyTick %<>% mutate(County=str_replace_all(County,"La Porte","LaPorte"))
+countyTick %<>% mutate(County=str_replace_all(County,"LaFourche","Lafourche"))
+countyTick %<>% mutate(County=str_replace_all(County,"Prince Georges","Prince George's"))
+countyTick %<>% mutate(County=str_replace_all(County,"Queen Annes","Queen Anne's"))
+countyTick %<>% mutate(County=str_replace_all(County,"St. Marys","St. Mary's"))
+countyTick %<>% mutate(County=str_replace_all(County,"Lac Qui Parle","Lac qui Parle"))
+ld.total %<>% mutate(County=str_replace_all(County,"Do\U3e34613ca Ana","Dona Ana"))
+countyTick %<>% mutate(County=str_replace_all(County,"La Moure","LaMoure"))
+countyTick %<>% mutate(County=str_replace_all(County,"De Witt","DeWitt"))
+ld.total %<>% mutate(County=str_replace_all(County,"De Witt","DeWitt"))
+countyTick %<>% mutate(County=str_replace_all(County,"Fond Du Lac","Fond du Lac"))
+
+# Adding missing counties to countyTick
+
+countyTick.add<-rbind(countyTick,c(55078,"Menominee","Wisconsin",2))
+countyTick.add<-rbind(countyTick,c(4012,"La Paz","Arizona",1))
+countyTick.add<-rbind(countyTick,c(8014,"Broomfield","Colorado",1))
+countyTick<-countyTick.add
+
+# Adding missing cities to countyTick
+newCity<-data.frame(fips=c(24510,29510,51510,51515,51520,51530,51540,51550,51570,51580,51590,51595,51600,51610,51620,51630,51640,51660,51670,51678,51680,51683,51685,51690,51720,51730,51735,51740,51750,51760,51770,51775,51790,51820,51830,51840),County=c("Baltimore city","St. Louis city","Alexandria city","Bedford city","Bristol city","Buena Vista city","Charlottesville city","Chesapeake city","Colonial Heights city","Covington city","Danville city","Emporia city","Fairfax city","Falls Church city","Franklin city","Fredericksburg city","Galax city","Harrisonburg city","Hopewell city","Lexington city","Lynchburg city","Manassas city","Manassas Park city","Martinsville city","Norton city","Petersburg city","Poquoson city","Portsmouth city","Radford city","Richmond city","Roanoke city","Salem city","Staunton city","Waynesboro city","Williamsburg city","Winchester city"),State=c("Maryland","Missouri","Virginia","Virginia","Virginia","Virginia","Virginia","Virginia","Virginia","Virginia","Virginia","Virginia","Virginia","Virginia","Virginia","Virginia","Virginia","Virginia","Virginia","Virginia","Virginia","Virginia","Virginia","Virginia","Virginia","Virginia","Virginia","Virginia","Virginia","Virginia","Virginia","Virginia","Virginia","Virginia","Virginia","Virginia"),Tick_presence=c(2,1,2,1,1,2,2,2,2,1,2,1,1,1,2,2,2,2,2,2,2,2,2,1,1,1,2,1,2,2,2,2,2,2,1,2))
+  
+countyTick.add<-rbind(newCity,countyTick.add)
+countyTick<-countyTick.add
+
+setdiff(ld.total$County,countyTick$County)
+
+# No differences in dataframes
+```
+
+##Merge ld.total and countyTick
+
+```{r}
+countyTick$fips<-as.numeric(countyTick$fips)
+countyTick$County<-as.character(countyTick$County)
+countyTick$State<-as.character(countyTick$State)
+countyTick$Tick_presence<-as.numeric(countyTick$Tick_presence)
+
+ld.tick<-inner_join(ld.total,countyTick)
+ld.tick.edit<-inner_join(ld.total,countyTick)
+
+```
+
+##Convert Tick_presence to 0 (1 or 3) or 1 (2 or 4)
+
+```{r}
+# This works, but I'd like to figure out how to write it as a for and if function
+ld.tick$Presence_current<-ld.tick$Tick_presence
+ld.tick$Presence_current<-gsub("1","0",ld.tick$Presence_current)
+ld.tick$Presence_current<-gsub("3","0",ld.tick$Presence_current)
+ld.tick$Presence_current<-gsub("2","1",ld.tick$Presence_current)
+ld.tick$Presence_current<-gsub("4","1",ld.tick$Presence_current)
+
+
+#Attempts didn't return successful, column filled completely with 1's
+
+ld.tick.edit$Presence_current<-1
+
+for(i in 1:dim(ld.tick.edit)[1]){
+  if (ld.tick.edit$Tick_presence[i]=="1"){
+    if (ld.tick.edit$Tick_presence[i]=="3"){
+      ld.tick.edit$Presence_current<-0
+        
+    }
+  }
+} 
+  
 ```
